All response are now in CamelCase
